# gbot

./: Cargo.toml  rustfmt.toml
engine/: Cargo.toml
engine/src/: main.rs
shared/: Cargo.toml
shared/src/: commands.rs  deser.rs  gcode_parser.rs  lib.rs
