[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
fugit = "0.3.7"
funty = { version = "2.0.0", default-features = false }
gcode = { version = "0.6.1", default-features = false }
heapless = { version = "0.7.17", default-features = false }
num_enum = { version = "0.*", default-features = false }
postcard = { version = "1.*", features = ["use-crc"] }
serde = { version = "1.*", default-features = false }
serde_with = { version = "3.*", default-features = false, features = ["macros"] }
